--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
 
     <groupId>io.github.liyao52033</groupId>
     <artifactId>autofill-javadoc-maven-plugin</artifactId>
-    <version>1.1.0</version>
+    <version>1.2.0</version>
     <packaging>maven-plugin</packaging>
     <name>autofill-javadoc-maven-plugin</name>
-    <description>基于java17的自动为 Java 方法补全 Javadoc 参数和返回值注释的 Maven 插件, 可以配合maven-javadoc-plugin插件使用</description>
+    <description>自动为 Java 方法补全 Javadoc 参数和返回值注释的 Maven 插件, 支持Java 8和Java 17, 可以配合maven-javadoc-plugin插件使用</description>
     <url>https://github.com/liyao52033/autofill-javadoc-maven-plugin</url>
 
     <licenses>
@@ -35,15 +35,17 @@
         <!-- JavaParser 依赖 -->
         <dependency>
             <groupId>com.github.javaparser</groupId>
-            <artifactId>javaparser-core</artifactId>
+            <artifactId>javaparser-symbol-solver-core</artifactId>
             <version>3.25.4</version>
         </dependency>
+
 
         <!-- Maven 插件开发 API -->
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
             <version>3.8.1</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- Maven 插件注解支持 -->
@@ -63,8 +65,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <release>8</release>
+                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
 
